<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KSP - Ultimate Application</string>
    <string name="SendRequest">Pobierz dane</string>
    <string name="connect">Połącz</string>
    <string name="disconnect">Rozłącz</string>
    <string name="day">Dzień</string>
    <string name="pressure">Ciśnienie</string>
    <string name="temperature">Temperatura</string>
    <string name="humidity">Wilgotność</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="month">Miesiąc</string>
    <string name="year">Rok</string>
    <string name="hour">Godzina</string>
    <string name="minute">Minuta</string>
    <string name="second">Sekunda</string>
    <string name="enterIpAdress">Wpisz adres IP</string>
    <string name="IPAdress">Adres IP</string>
    <string name="incorrectIP">Podano nieprawidłowy adres IP</string>

</resources>